# billscanner

./: README.md
gui/: gnucache-bill-importer.pro  gnucache-bill-importer.qml  gnucache-bill-importer.qmlproject  main.cpp  main.h  mainWindow.cpp  mainWindow.h  mainWindow.ui
source/: CMakeLists.txt  gnucache-bill-importer.cpp  gnucache-bill-importer.h  imageLoader.cpp  imageLoader.h
src/: CMakeLists.txt  errorHandler.cpp  errorHandler.h  gnucache-bill-importer.cpp  gnucache-bill-importer.h  imageLoader.cpp  imageLoader.h  tags
test/src/: CMakeLists.txt  gnucache-bill-importer_test.cpp  gnucache-bill-importer_test.h  imageLoader_test.cpp
